# autoplanner

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo_decisions.py  design-a-way-for-models-to-incorporate-conditional-20260410-205625-requirements.md  pyproject.toml  telegram-integration-requirements.md  telegram-integration-walkthrough.md
autoplanner/: debug.py  decisions.py  history.py  main.py  orchestrator.py  output.py  prompts.py  steering.py  tui.py
autoplanner/agents/: claude_agent.py  codex_agent.py  run.py  session.py
autoplanner/prompts/: claude_draft.txt  claude_revise.txt  codex_review.txt  decisions_instruction.txt  discuss_decision.txt  revise.txt  walkthrough.txt
tests/: test_decision_chat.py  test_decisions.py  test_extract_markdown.py  test_history.py  test_history_decisions.py  test_is_done.py  test_session_helpers.py  test_steering.py
