[project]
name = "autoplanner"
version = "0.1.0"
description = "Agentic document refinement loop using Claude Code and Codex CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "textual>=3.0",
]

[project.scripts]
autoplanner = "autoplanner.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
